完成设置的基本页面

--- a/src/main/resources/config/language/language.properties
+++ b/src/main/resources/config/language/language.properties
@@ -33,7 +33,7 @@ index.lblRouterName=Router\u7C7B\u540D:
 index.lblSqlName=SQL\u7C7B\u540D:
 index.lblAssistName=SqlAssist\u7C7B\u540D:
 index.lblAbstractSqlName=AbstractSql\u7C7B\u540D:
-index.lblSqlParamsName=AbstractSql\u7C7B\u540D:
+index.lblSqlParamsName=SqlAParams\u7C7B\u540D:
 index.lblRunCreateAllTips=SqlAParams\u7C7B\u540D:
 index.runCreateTipsText=\u6B63\u5728\u751F\u6210
 index.lblSetCustom=\u81EA\u5B9A\u4E49\u5305\u540D\u4E0E\u7C7B: 
@@ -86,4 +86,5 @@ set.lblTemplate=\u4F7F\u7528\u6A21\u677F :
 set.cboTemplate=\u8BF7\u9009\u62E9\u6216\u8F93\u5165\u6A21\u677F\u7684\u540D\u79F0
 set.btnConfirm=\u786E \u5B9A
 set.btnCancel=\u53D6 \u6D88
-
+set.chkOverrideFile=\u5982\u679C\u6587\u4EF6\u5B58\u5728\u5219\u8986\u76D6
+set.abstractAutomatic=\u6839\u636E\u6570\u636E\u5E93\u7C7B\u578B\u81EA\u52A8\u9009\u62E9
