--- a/src/main/resources/config/language/language_en.properties
+++ b/src/main/resources/config/language/language_en.properties
@@ -85,5 +85,5 @@ set.lblTemplate=Use the template:
 set.cboTemplate=Select or input the template name
 set.btnConfirm=Confirm
 set.btnCancel=Cancel
-
-
+set.chkOverrideFile=If the file exists override
+set.abstractAutomatic=Automatic selection by DB type
