完善基本的设置

--- a/src/main/resources/config/language/language.properties
+++ b/src/main/resources/config/language/language.properties
@@ -23,17 +23,19 @@ index.lblServicePackage=Service\u5305\u540D:
 index.lblServiceImplPackage=ServiceImpl\u5305\u540D:
 index.lblRouterPackage=Router\u5305\u540D:
 index.lblSqlPackage=SQL\u5305\u540D:
-index.lblAssistPackage=SqlAssist\u5305\u540D:
+index.lblAssistPackage=SqlAssist\u5305\u540D: 
 index.lblAbstractSqlPackage=AbstractSql\u5305\u540D:
 index.lblSqlParamsPackage=SqlAndParams\u5305\u540D:
+index.lblUnitTestPackage=\u5355\u5143\u6D4B\u8BD5\u5305\u540D: 
 index.lblEntityName=\u5B9E\u4F53\u7C7B\u540D:
 index.lblServiceName=Service\u63A5\u53E3\u540D:
 index.lblServiceImplName=ServiceImpl\u7C7B\u540D:
 index.lblRouterName=Router\u7C7B\u540D:
 index.lblSqlName=SQL\u7C7B\u540D:
-index.lblAssistName=SqlAssist\u7C7B\u540D:
+index.lblAssistName=SqlAssist\u7C7B\u540D: 
 index.lblAbstractSqlName=AbstractSql\u7C7B\u540D:
 index.lblSqlParamsName=SqlAParams\u7C7B\u540D:
+index.lblUnitTestName=\u5355\u5143\u6D4B\u8BD5\u7C7B\u540D: 
 index.lblRunCreateAllTips=SqlAParams\u7C7B\u540D:
 index.runCreateTipsText=\u6B63\u5728\u751F\u6210
 index.lblSetCustom=\u81EA\u5B9A\u4E49\u5305\u540D\u4E0E\u7C7B: 
@@ -88,3 +90,12 @@ set.btnConfirm=\u786E \u5B9A
 set.btnCancel=\u53D6 \u6D88
 set.chkOverrideFile=\u5982\u679C\u6587\u4EF6\u5B58\u5728\u5219\u8986\u76D6
 set.abstractAutomatic=\u6839\u636E\u6570\u636E\u5E93\u7C7B\u578B\u81EA\u52A8\u9009\u62E9
+set.tblMenuItemDelete=  \u5220\u9664\u8BE5\u5C5E\u6027  
+set.tblMenuItemDeleteConfirm=  \u786E\u5B9A\u5220\u9664\u8BE5\u5C5E\u6027\u5417  
+set.commonPackageName = package name
+set.commonClassName = class name
+set.commonTemplateName= \u6A21\u677F
+set.lblPackageName = \u5305\u540D :
+set.lblClassName = \u7C7B\u540D :
+set.txtPackageName = \u8BF7\u8F93\u5165\u5305\u540D
+set.txtClassName = \u8BF7\u8F93\u5165\u7C7B\u540D
