--- a/src/main/resources/config/language/language_en.properties
+++ b/src/main/resources/config/language/language_en.properties
@@ -23,20 +23,22 @@ index.lblServicePackage=ServiceImplPackage:
 index.lblServiceImplPackage=ServiceImplPackage:
 index.lblRouterPackage=RouterPackage:
 index.lblSqlPackage=SqlPackage:
-index.lblAssistPackage=AssistPackage:
+index.lblAssistPackage=AssistPackage: 
 index.lblAbstractSqlPackage=AbstractSqlPackage:
 index.lblSqlParamsPackage=SqlParamsPackage:
+index.lblUnitTestPackage=UnitTestPackage: 
 index.lblEntityName=EntityName:
 index.lblServiceName=ServiceImplName:
 index.lblServiceImplName=ServiceImplName:
 index.lblRouterName=RouterName:
 index.lblSqlName=SqlName:
-index.lblAssistName=SqlAssistName:
+index.lblAssistName=SqlAssistName: 
 index.lblAbstractSqlName=AbstractSqlName:
 index.lblSqlParamsName=SqlAndParamsName:
+index.lblUnitTestName=UnitTestName: 
 index.runCreateTipsText=generating
-index.lblSetCustom=CustomPackageClass:
-index.lblSetCustomProperty=CustomProperty:
+index.lblSetCustom=CustomPackageClass: 
+index.lblSetCustomProperty=CustomProperty: 
 index.lblCodeFormat=FileCodeFormat: 
 index.btnRunCreate=RunCreate
 index.btnSaveConfig=SaveConfig
@@ -47,6 +49,7 @@ index.tvmiDeleteConnect=DeleteConnect
 index.tvmiCreateFullDB=CreateFullDataBase
 index.saveConfigTips=Please input the configuration name: \r\n (the name of the table is not stored in the scope, it must be loaded through the database)
 index.saveConfigNotCTips=All class names must contain placeholders for replacing table names: {c}
+
 conn.lblConnName=ConnectName: 
 conn.lblConnURL=ConnectURL: 
 conn.lblListenPort=ListenPort: 
@@ -87,3 +90,13 @@ set.btnConfirm=Confirm
 set.btnCancel=Cancel
 set.chkOverrideFile=If the file exists override
 set.abstractAutomatic=Automatic selection by DB type
+set.tblMenuItemDelete=  Delete this property  
+set.tblMenuItemDeleteConfirm=  Do you want to delete this property  
+set.commonPackageName = PackageName
+set.commonClassName = ClassName
+set.commonTemplateName= TemplateName
+set.lblPackageName = Pname:
+set.lblClassName = Cname:
+set.txtPackageName = Input package name
+set.txtClassName = Input class name
+
