完成上下文获取

--- a/src/main/resources/config/language/language_en.properties
+++ b/src/main/resources/config/language/language_en.properties
@@ -49,6 +49,8 @@ index.tvmiDeleteConnect=DeleteConnect
 index.tvmiCreateFullDB=CreateFullDataBase
 index.saveConfigTips=Please input the configuration name: \r\n (the name of the table is not stored in the scope, it must be loaded through the database)
 index.saveConfigNotCTips=All class names must contain placeholders for replacing table names: {c}
+index.selectTableTips=Please select the database table ! Open the left database and double-click the table name to load...
+index.createTableTips=Please double-click the left side data to select the table you want to generate, or to generate the entire database on the left side.
 
 conn.lblConnName=ConnectName: 
 conn.lblConnURL=ConnectURL: 
@@ -69,11 +71,28 @@ conn.cboDBCoding=DatabaseCodeFormat
 conn.btnTestConn=TestConnect
 conn.btnSave=Save
 conn.btnCancel=Cancel
+
 config.lblTips=Warm reminder: when the system starts, it will load the default configuration file by default. If it is a common configuration, you can store the name as default.
 config.tdInfo=ConfigurationName
 config.tdOperation=Operation
 config.btnLoad=LoadConfig
 config.btnDelete=DeleteConfig
+
+setEntity.tdcreate=IsCreate
+setEntity.tdColumn=ColumnName
+setEntity.tdSqlType=SqlType
+setEntity.tdJavaType=JavaType
+setEntity.tdField=Field
+setEntity.lblTableAlias=TableAlias :
+setEntity.txtTableAlias=Input custom table alias
+setEntity.lblPrimaryKey=PrimaryKey :
+setEntity.txtPrimaryKey=No primary key
+setEntity.lblKey=Type :
+setEntity.txtKey=Example : Animal
+setEntity.lblValue=Name :
+setEntity.txtValue=Example : dog
+setEntity.chkFieldCamel=Field camel naming
+
 set.tblTips=You can customize the added property on the right...
 set.tdDescribe=describe
 set.lblTips=Tip: if you need the entity class name, you can use {c}, for example: insert{c} if the class name is User, the result is: insertUser, {C}=User, {c}=user
@@ -88,6 +107,7 @@ set.lblTemplate=Use the template:
 set.cboTemplate=Select or input the template name
 set.btnConfirm=Confirm
 set.btnCancel=Cancel
+set.btnCancelTips=If cancel they will revert to the default value, Do you want to cancel?
 set.chkOverrideFile=If the file exists override
 set.abstractAutomatic=Automatic selection by DB type
 set.tblMenuItemDelete=  Delete this property  
