--- a/src/main/resources/config/language/language_zh_CN.properties
+++ b/src/main/resources/config/language/language_zh_CN.properties
@@ -64,7 +64,7 @@ conn.lblDBCoding=\u7F16\u7801\u683C\u5F0F:
 conn.txtConnName=\u81EA\u5B9A\u4E49\u60F3\u8981\u663E\u793A\u7684\u540D\u5B57
 conn.txtConnURL=URL\u4F8B\u5982:127.0.0.1 / localhost
 conn.txtListenPort=\u76D1\u542C\u7684\u7AEF\u53E3\u53F7,\u793A\u4F8B:1521
-conn.cboDBType=\u8BF7\u9009\u62E9\u6570\u636E\u5E93\u7C7B\u578B
+conn.cboDBType=\u8BF7\u8F93\u5165\u6216\u9009\u62E9\u6570\u636E\u5E93\u7C7B\u578B
 conn.txtDBName=\u6570\u636E\u5E93\u540D\u79F0
 conn.txtUserName=\u7528\u6237\u540D
 conn.txtUserPwd=\u8BF7\u8F93\u5165\u5BC6\u7801
