--- a/src/main/resources/config/language/language.properties
+++ b/src/main/resources/config/language/language.properties
@@ -115,6 +115,7 @@ set.tblMenuItemDelete=  \u5220\u9664\u8BE5\u5C5E\u6027
 set.tblMenuItemDeleteConfirm=  \u786E\u5B9A\u5220\u9664\u8BE5\u5C5E\u6027\u5417  
 set.commonPackageName = package name
 set.commonClassName = class name
+set.commonSuffix = \u540E\u7F00\u540D
 set.commonTemplateName= \u6A21\u677F
 set.lblPackageName = \u5305\u540D :
 set.lblClassName = \u7C7B\u540D :
