--- a/src/main/resources/config/language/language_en.properties
+++ b/src/main/resources/config/language/language_en.properties
@@ -115,6 +115,7 @@ set.tblMenuItemDelete=  Delete this property
 set.tblMenuItemDeleteConfirm=  Do you want to delete this property  
 set.commonPackageName = PackageName
 set.commonClassName = ClassName
+set.commonSuffix = Suffix
 set.commonTemplateName= TemplateName
 set.lblPackageName = Pname:
 set.lblClassName = Cname:
